Revision history for Net-GitHub

0.24    2011.01.01
        Organizations API (fayland)
        update Auth to 'Basic Auth' (fayland)

0.23    2010.11.04
        Moose has deprected 'excludes', '-excludes' is preferred (datamuc)

0.22    2010.05.26
        token and login are really optional (franck cuny)

0.21    2010.05.18
        try to load user and token from .gitconfig if not specified in
        new (franck cuny)

0.20    2010.01.27
        add languages support to repositories api (franck cuny)

0.19    2009.09.05
        Bugfix: Send delete token to GitHub, not obj hash (spang)

0.18    2009.06.14
        Switch to Any::Moose from Moose (Jesse Vincent)
        Issue comments (sunnavy)

0.17    2009.05.19
        use 'https' for user->update, issue->comment etc.

0.16    2009.05.19
        fix the role (Chris Nehren)

0.15    2009.05.16
        Refactored role support. (Chris Nehren)
        Copy $repo->list to $user->list where it makes more sense (and doesn't
        require a repo object). (Chris Nehren)

0.14    2009.05.15
        Users pod fix

0.13    2009.05.15
        Refactor the role system to be finer-grained based upon whether a class
        needs repo access or not. (Chris Nehren)

0.12    2009.05.01
        Commits.pm sub file default branch as 'master'
        Strip the leading '/' from paths provided to get_json_to_obj* methods (bingos)
        make_immutable inline_constructor => 0

0.11    2009.4.21
        deal with 404

0.10    2009.4.21
        owner/repo/login/token are 'ro' to avoid bug
        fix user->update

0.09    2009.4.21
        issues pod tweak by c9s
        search issues and comment issues (new API)

0.08    2009.4.19
        bug fix

0.07    2009.4.19
        make 'owner' and 'repo' is => 'rw' for App::GitHub

0.06    2009.4.18
        http://github.com/api/v2/ (API are changed)

0.05    2009.3.11
        pod fix

0.04    2009.3.10
        use WWW::Mechanize::GZip
        add N::G::Project::Wiki and Downloads